# graduation_project

./: .gitignore
backend/: README.md  celerybeat-schedule.db  dump.rdb  manage.py  pyproject.toml
backend/backend/application/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/backend/course/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/backend/course/migrations/: 0001_initial.py  0002_alter_practicaltask_difficulty.py  0003_practicaltask_author_usertask_user_solution.py  0004_usertask_created_at_usertask_updated_at_and_more.py  0005_alter_usertask_updated_at.py
backend/backend/databases/: admin.py  apps.py  form.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/backend/databases/migrations/: 0001_initial.py  0002_relation_database.py  0003_userdatabasesession.py  0004_userdatabasesession_operations_count.py  0005_database_author.py  0006_alter_database_author.py  0007_table_position.py
backend/backend/databases/templates/admin/: custom_change_list.html  upload_dump.html
backend/backend/user/: admin.py  apps.py  backends.py  errors.py  forms.py  mixins.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/backend/user/migrations/: 0001_initial.py  0002_lazyuser.py  0003_user_inviter_invitelink.py  0004_user_is_teacher.py  0005_alter_user_inviter.py  0006_user_email.py
backend/backend/user/templates/: generate_invite_link.html
frontsql/: package-lock.json  package.json
frontsql/src/: App.js  index.css  setupProxy.js
frontsql/src/Components/: AuthModal.css  Main.css  (+19 more)
